app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: app.s000099.edu.slurm.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yelb-ui
            port:
              number: 80
